--- a/full-service-form-1of5.html
+++ b/full-service-form-1of5.html
@@ -71,32 +71,40 @@
 					</div>
 
 					<div class="grid-col-1of1">
-						<label for="address">Address</label>
-				  		<input type="text" id="address" name="address" placeholder='Your address'>
+						<div class="name-item">
+							<label for="address">Address</label>
+				  			<input type="text" id="address" name="address" placeholder='Your address'>
+				  		</div>
 				  	</div>
 
 				  	<div class="grid-col-1of3">
-				  		<label for="province">Province</label>
-				  		<input type="text" id="province" name="Province" placeholder='Your province'>
+				  		<div class="name-item">
+				  			<label for="province">Province</label>
+				  			<input type="text" id="province" name="Province" placeholder='Your province'>
+				  		</div>
 				  	</div>
 
 				  	<div class="grid-col-1of3">
-						<label for="city">City</label>
-				  		<input type="text" id="city" name="city" placeholder='Your city'>
+				  		<div class="name-item">
+							<label for="city">City</label>
+				  			<input type="text" id="city" name="city" placeholder='Your city'>
+				  		</div>
 				    </div>
 
 				    <div class="grid-col-1of3">
-						<label for="pc">Postal Code</label>
-				   		<input type="text" id="pc" name="pc" placeholder='XXX XXX'>
+				    	<div class="name-item">
+							<label for="pc">Postal Code</label>
+				   			<input type="text" id="pc" name="pc" placeholder='XXX XXX'>
+				   		</div>
 				   </div>
 
 				  	<div class="grid-col-1of2">
-				  		<div class="contact-item">
+				  		<div class="name-item">
 				  			<label for="email-ad">Email Address</label>
 				  			<input type="text" id="email-ad" name="email-ad" placeholder='name@domain.com'>
 				  		</div>
 
-						<div class="contact-item">
+						<div class="name-item">
 							<label for="phone-number">Phone Number</label>
 							<input type="text" id="phone-number" name="phone-number" placeholder="(###) ###-####">
 						</div>
@@ -110,7 +118,7 @@
 	 					 </select>
  					</div>
 
-					<div class="right-align">
+					<div class="right-align-loc">
 						<a href="full-service-form-2of5.html">
 							<button type="button" class="btn-main">LOCATION DETAILS</button>
 						</a>
@@ -149,10 +157,11 @@
 				 </p>
 			 </div>
 		 	
-		 	<div class="child-footer mailing-list">
+		 	 <div class="child-footer mailing-list">
 				 <h3>GET THE DIRT</h3>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
+				 <button type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
