--- a/full-service-form-2of5.html
+++ b/full-service-form-2of5.html
@@ -108,15 +108,18 @@
 				  		<input type="text" id="location" name="location">
 			  		</div>
 
-					<div class="left-align">
-							<a href="full-service-form-1of5.html">&#8592; Go back to personal details</a>
-						</div>
+			  		<div class="grid-col-1of1">
+						<div class="left-align">
+								<a href="full-service-form-1of5.html">&#8592; Go back to personal details</a>
+							</div>
 
-					<div class="right-align">
-						<a href="full-service-form-3of5.html">
-							<button type="button" class="btn-main">ART DIRECTION</button>
-						</a>
+						<div class="right-align">
+							<a href="full-service-form-3of5.html">
+								<button type="button" class="btn-main">ART DIRECTION</button>
+							</a>
+						</div>
 					</div>
+					
 				</form>
 			</div>
 
@@ -151,10 +154,11 @@
 				 </p>
 			 </div>
 		 	
-		 	<div class="child-footer mailing-list">
+		 	 <div class="child-footer mailing-list">
 				 <h3>GET THE DIRT</h3>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
+				 <button type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
