--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
  		<div class="sub-footer">
  			<a href="styleguide.html" target="_blank"> Styleguide</a>
+ 			<a href="wireframes.html" target="_blank"> Wireframes</a>
  			<a href="citations.html" target="_blank"> Citations</a>
  			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
  		</div>
