--- a/shop-services.html
+++ b/shop-services.html
@@ -2,7 +2,6 @@
 <!-- Code structure has been mostly adapted to use from Paul Brokenshire. Additional
 	codes not learned from lecture and tutorials have been from support websites and/or from our team's own knowledge. Support websites are given credit within the code as well as in our Citiations page -->
 
-
 <!doctype html>
 
 	<head>
@@ -69,7 +68,7 @@
 		<!----- Products ---->
 		<section class ="categories grid">
 			<div class ="menu services">
-				<a href="full-service-form-1of6.html">
+				<a href="full-service-form-1of5.html">
 					<img src="img/alexander-ross.jpg" alt="Photo of bride holding white and pink bouquet">
 					<p>Full Service</p>
 				</a>
@@ -90,6 +89,7 @@
 				</a>
 			</div>
 		</section>
+
 		<!----- Footer----->
 		 <footer class="main-footer grid">
 			 <div class="child-footer about">
@@ -119,10 +119,11 @@
 				 </p>
 			 </div>
 		 
-		 	<div class="child-footer mailing-list">
+		 	 <div class="child-footer mailing-list">
 				 <h3>GET THE DIRT</h3>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
+				 <button type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
