--- a/sitemap.html
+++ b/sitemap.html
@@ -12,6 +12,7 @@
      	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/styleguide.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/grids.css">
 		
@@ -20,17 +21,13 @@
 	<body>
 		<header>
 			 <nav class="grid styleguide">
-				<a href="index.html">Home</a>
 				<a href="sitemap.html">Site Map</a>
 				<a href="wireframes.html">Wireframes</a>
-				<a href="styleguide.html">Styleguide</a>
-				<a href="citations.html">Citations</a>
 			</nav> 
 		</header>
 
 		<section class="sitemap">
-			<!-- <h1 class="styleguide">Site Map</h1> -->
-				<img src="img/sitemap.png" alt="A site map of the website.">
+			<img src="img/sitemap.png" alt="A site map of the website.">
 		</section> 
 
 	</body>
