--- a/styleguide.html
+++ b/styleguide.html
@@ -728,6 +728,12 @@
 				 &lt;br&gt;V5R 5K6  ;/p&gt;<br>
 				 &lt;/p&gt;<br>
 				 &lt;/div&gt;<br>
+				  &lt;/div class="child-footer mailing-list"&gt;<br>
+				  &lt;/h3&gt;GET THE DIRT &lt;//h3&gt;<br>
+				  &lt;/p&gt;No spam. Just great content. &lt;//p&gt;<br>
+				  &lt;/input type="text" id="email" name="email" placeholder='name@domain.com'&gt;<br>
+				  &lt;/button type="button" class="btn-submit"&gt;&#8592; &lt;//button&gt;<br>
+			 	 &lt;/div&gt;<br>
 				 &lt;/div&gt;<br>
 				 &lt;/section&gt;<br>
 
@@ -757,6 +763,14 @@
 						 <p><i class="fab fa-instagram"></i> Instagram</p>
 						 <p><i class="fab fa-facebook-f"></i> Facebook</p>
 					 </div>
+
+					  <div class="child-footer mailing-list">
+						 <h3>GET THE DIRT</h3>
+						 <p>No spam. Just great content.</p>
+						 <input type="text" id="email" name="email" placeholder='name@domain.com'>
+						 <button type="button" class="btn-submit">→</button>
+					 </div>
+
 				 	</div>
 			 	</section>
 			</section>
