--- a/wireframes.html
+++ b/wireframes.html
@@ -11,6 +11,7 @@
      	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/styleguide.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/grids.css">
 
@@ -19,11 +20,8 @@
 	<body>
 		<header>
 			 <nav class="grid styleguide">
-				<a href="index.html">Home</a>
 				<a href="sitemap.html">Site Map</a>
 				<a href="wireframes.html">Wireframes</a>
-				<a href="styleguide.html">Styleguide</a>
-				<a href="citations.html">Citations</a>
 			</nav>
 		</header>
 
@@ -44,14 +42,14 @@
 
 		<!-- Secondary Nav -->
 		<nav class="grid sub-nav">
-					<a href="#task1">Task 1</a>
-					<a href="#task2">Task 2</a>
-					<a href="#task3">Task 3</a>
-					<a href="#task4">Task 4</a>
-					<a href="#task5">Task 5</a>
-					<a href="#task6">Task 6</a>
-					<a href="#task7">Task 7</a>
-					<a href="#task8">Task 8</a>
+			<a href="#task1">Task 1</a>
+			<a href="#task2">Task 2</a>
+			<a href="#task3">Task 3</a>
+			<a href="#task4">Task 4</a>
+			<a href="#task5">Task 5</a>
+			<a href="#task6">Task 6</a>
+			<a href="#task7">Task 7</a>
+			<a href="#task8">Task 8</a>
 		</nav>
 
 		<!--Wireframes Section-->
@@ -59,14 +57,14 @@
 			<h1 class="styleguide">User Flow Wireframes</h1>
 				<!--Task 1-->
 				<section id="task1">
-					<h2>Learn about what the company values</h2>
+					<h2>Learn about what the company values.</h2>
 						<img src="img/wireframes/task1.png" alt="Desktop and mobile userflows for Task 1: Learn about what the company values">
 				</section>
 
 
 				<!--Task 2-->
 				<section id="task2">
-					<h2>Order a bouquet of flowers for an anniversary</h2>
+					<h2>Order a bouquet of flowers for an anniversary.</h2>
 						<img src="img/wireframes/task2.png" alt="Desktop and mobile userflows for Task 2: Order a bouquet of flowers for an anniversary." >
 				</section>
 
@@ -79,7 +77,7 @@
 
 				<!--Task 4-->
 				<section id="task4">
-					<h2>Find the company's address, operating hours, and contact information</h2>
+					<h2>Find the company's address, operating hours, and contact information.</h2>
 						<img src="img/wireframes/task4.png" alt="Desktop and mobile userflows for Task 4.">
 				</section>
 
@@ -111,7 +109,7 @@
 
 		<!--Mock Ups Section-->
 		<section class="mockups">
-			<h1 class="template">MOCK UP EXAMPLE</h2>
+			<h1 class="styleguide">MOCK UP EXAMPLE</h2>
 				<img src="img/home-mockups.png" alt="High-fidelity mockups of the company's home page for a desktop view (left) and mobile view (right).">
 		</section>
 
