--- a/full-service-form-3of6.html
+++ b/full-service-form-3of6.html
@@ -108,10 +108,11 @@
 				 </p>
 			 </div>
 		 	
-		 	<div class="child-footer mailing-list">
+		 	 <div class="child-footer mailing-list">
 				 <h3>GET THE DIRT</h3>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
+				 <button type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
