--- a/full-service-form-5of5.html
+++ b/full-service-form-5of5.html
@@ -62,9 +62,11 @@
 
 			</div>
 
-			<a href="index.html">
-				<button type="button" class="btn-main">RETURN HOME</button>
-			</a>
+			<div class ="center">
+				<a href="index.html">
+					<button type="button" class="btn-main">RETURN HOME</button>
+				</a>
+			</div>
 
 		</section>
 </body>
