--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -67,9 +67,11 @@
 				<p>Thank you for supporting Four Seasons Floral! </p> 
 			</div>
 
-			<a href="index.html">
-				<button type="button" class="btn-main">RETURN HOME</button>
-			</a>
+			<div class ="center">
+				<a href="index.html">
+					<button type="button" class="btn-main">RETURN HOME</button>
+				</a>
+			</div>
 
 		</section>
 </body>
