--- a/shipping-details.html
+++ b/shipping-details.html
@@ -71,32 +71,40 @@
 					</div>
 
 					<div class="grid-col-1of1">
-						<label for="address">Address</label>
-				  		<input type="text" id="address" name="address" placeholder='Your address'>
+						<div class="name-item">
+							<label for="address">Address</label>
+				  			<input type="text" id="address" name="address" placeholder='Your address'>
+				  		</div>
 				  	</div>
 
 				  	<div class="grid-col-1of3">
-				  		<label for="province">Province</label>
-				  		<input type="text" id="province" name="Province" placeholder='Your province'>
+				  		<div class="name-item">
+				  			<label for="province">Province</label>
+				  			<input type="text" id="province" name="Province" placeholder='Your province'>
+				  		</div>
 				  	</div>
 
 				  	<div class="grid-col-1of3">
-						<label for="city">City</label>
-				  		<input type="text" id="city" name="city" placeholder='Your city'>
+				  		<div class="name-item">
+							<label for="city">City</label>
+				  			<input type="text" id="city" name="city" placeholder='Your city'>
+				  		</div>
 				    </div>
 
 				    <div class="grid-col-1of3">
-						<label for="pc">Postal Code</label>
-				   		<input type="text" id="pc" name="pc" placeholder='XXX XXX'>
+				    	<div class="name-item">
+							<label for="pc">Postal Code</label>
+				   			<input type="text" id="pc" name="pc" placeholder='XXX XXX'>
+				   		</div>
 				   </div>
 
 				  	<div class="grid-col-1of2">
-				  		<div class="contact-item">
+				  		<div class="name-item">
 				  			<label for="email-ad">Email Address</label>
 				  			<input type="text" id="email-ad" name="email-ad" placeholder='name@domain.com'>
 				  		</div>
 
-						<div class="contact-item">
+						<div class="name-item">
 							<label for="phone-number">Phone Number</label>
 							<input type="text" id="phone-number" name="phone-number" placeholder="(###) ###-####">
 						</div>
@@ -110,26 +118,23 @@
 			 <h3 class="billing-address">Billing Address:</h3>
 				  <!---Radio buttons from https://www.w3schools.com/tags/att_input_type_radio.asp-->
 				  <div class="grid-col-1of2">
-				  	<div class="name-item shipping">
-					  <input type="radio" id="shipping" name="address" value="address">
-					  <label for="address">Same as shipping address</label>
-					</div>
+					  	<div class="name-item shipping">
+						  <input type="radio" id="shipping" name="address" value="address">
+						  <label for="address">Same as shipping address</label>
+						</div>
 
 					 <div class="name-item billing">
-					  <input type="radio" id="billing" name="address" value="address">
+					 	 <input type="radio" id="billing" name="address" value="address">
 					  <label for="address">Different from shipping address</label>
 					</div>
-
 				</div>
 
-				
-				<div class="grid-col-1of2">
+				<div class="grid-col-1of1">
 						<div class="name-item">
 							<label for="fname">Name on Card</label>
 							<input type="text" id="fname" name="fname">
 						</div>
-
-
+		
 						<div class="name-item">
 							<label for="cc-number">Card Number</label>
 							<input type="text" id="cc-number" name="cc-number" placeholder="#### #### #### ####">
@@ -137,13 +142,15 @@
 				</div>
 
 				<div class="grid-col-1of1">
-					<label for="exp-date">Expiration Date</label>
-			  		<input type="text" id="exp-date" name="exp-date" placeholder='MM/YY'>
-			  	</div>
+					<div class="name-item">
+						<label for="exp-date">Expiration Date</label>
+			  			<input type="text" id="exp-date" name="exp-date" placeholder='MM/YY'>
+			  		</div>
 
-			  	<div class="grid-col-1of3">
-			  		<label for="cc-code">CVV</label>
-			  		<input type="text" id="cc-code" name="cc-code" placeholder='###'>
+			  		<div class="name-item">
+			  			<label for="cc-code">CVV</label>
+			  			<input type="text" id="cc-code" name="cc-code" placeholder='###'>
+			  		</div>
 			  	</div>
 		</form>
 
@@ -163,8 +170,8 @@
 					<p>FREE</p>
 				</div>
 				<div class="flex jc-sb">
-					<p>Estimated Total</p>
-					<p>$54.99</p>
+					<p>Total</p>
+					<p>$61.59</p>
 				</div>
 				<div class="right-align">
 					<a href="order-confirmation.html">
@@ -204,10 +211,11 @@
 				 </p>
 			 </div>
 		 	
-		 	<div class="child-footer mailing-list">
+		 	 <div class="child-footer mailing-list">
 				 <h3>GET THE DIRT</h3>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
+				 <button type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
