--- a/support.html
+++ b/support.html
@@ -150,11 +150,12 @@
 				 </p>
 		 </div>
 	 	
-	 	<div class="child-footer mailing-list">
+ 		 <div class="child-footer mailing-list">
 			 <h3>GET THE DIRT</h3>
 			 <p>No spam. Just great content.</p>
 			 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-		</div> 
+			 <button type="button" class="btn-submit">→</button>
+		 </div>
  	</footer>
 
 		<div class="sub-footer">
