added two new product tiles

--- a/shop.html
+++ b/shop.html
@@ -111,9 +111,27 @@
 
 			<div class ="product-item col-2of3">
 				<a href="detailed-product-2.html">
-				  	 <img src="img/products/summer-bouquet.jpg" alt="Photo of purple bouquet">
+				  	 <img src="img/products/summer-bouquet.jpg" alt="Photo of yellow, pink and purple bouquet">
 				  	  <p class="product-name">Spirit of Summer</p>
 					  <p class ="price">$44.99</p>
+					 <a class ="btn-add" href="cart.html"> Add to cart </a>
+				</a>
+			</div>
+
+			<div class ="product-item col-2of3">
+				<a href="detailed-product-2.html">
+				  	 <img src="img/products/violet-bouquet.jpg" alt="Photo of violet bouquet">
+				  	  <p class="	product-name">Spirit of Summer</p>
+					  <p class ="price">$39.99</p>
+					 <a class ="btn-add" href="cart.html"> Add to cart </a>
+				</a>
+			</div>
+
+			<div class ="product-item col-2of3">
+				<a href="detailed-product-2.html">
+				  	 <img src="img/products/pink-bouquet.jpg" alt="Photo of pink bouquet">
+				  	  <p class="product-name">Spirit of Summer</p>
+					  <p class ="price">$36.99</p>
 					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
 			</div>
