renamed bouquet titles

--- a/shop.html
+++ b/shop.html
@@ -121,7 +121,7 @@
 			<div class ="product-item col-2of3">
 				<a href="detailed-product-2.html">
 				  	 <img src="img/products/violet-bouquet.jpg" alt="Photo of violet bouquet">
-				  	  <p class="	product-name">Spirit of Summer</p>
+				  	  <p class="product-name"> Very Violet</p>
 					  <p class ="price">$39.99</p>
 					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
@@ -130,7 +130,7 @@
 			<div class ="product-item col-2of3">
 				<a href="detailed-product-2.html">
 				  	 <img src="img/products/pink-bouquet.jpg" alt="Photo of pink bouquet">
-				  	  <p class="product-name">Spirit of Summer</p>
+				  	  <p class="product-name">Pretty In Pink</p>
 					  <p class ="price">$36.99</p>
 					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
