fixed alignment in the detailed product pages

--- a/detailed-product-plant.html
+++ b/detailed-product-plant.html
@@ -55,11 +55,11 @@
 
 
 		<!----- Detailed Product ----->
-		<section class="detailed-product grid">
+		<section class="detailed-product grid-product">
 			<div class="product-img col-1of2">
 				<img src="img/products/mong-bui.jpg" alt="Photo of an aloe succulent in a wooden planter">
 			</div>
-			<div class="product-desc col-2of2">
+			<div class="product-desc">
 				<div class= "container-title">
 					<h2>Aloe Succulent — $9.99 </h2>
 				</div>
