--- a/detailed-product-2.html
+++ b/detailed-product-2.html
@@ -55,11 +55,11 @@
 
 
 		<!----- Detailed Product ----->
-		<section class="detailed-product grid">
+		<section class="detailed-product grid-product">
 			<div class="product-img col-1of2">
 				<img src="img/products/red-bouquet.jpg" alt="Photo of Radiantly Rouge bouquet">
 			</div>
-			<div class="product-desc col-2of2">
+			<div class="product-desc">
 				<div class= "container-title">
 					<h2>Radiantly Rouge — $55.99</h2>
 				</div>
