--- a/detailed-product.html
+++ b/detailed-product.html
@@ -55,11 +55,11 @@
 
 
 		<!----- Detailed Product ----->
-		<section class="detailed-product grid">
+		<section class="detailed-product grid-product">
 			<div class="product-img col-1of2">
 				<img src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
 			</div>
-			<div class="product-desc col-2of2">
+			<div class="product-desc">
 				<div class= "container-title">
 					<div>
 					<h2>Lover's Sunrise — $45</h2>
