flushed CTA button to right & made flow responsive

--- a/full-service-form-2of5.html
+++ b/full-service-form-2of5.html
@@ -108,7 +108,7 @@
 				  		<input type="text" id="location" name="location">
 			  		</div>
 
-			  		<div class="grid-col-1of1">
+			  		<div class="grid-col-1of1 buttons">
 						<div class="left-align">
 								<a href="full-service-form-1of5.html">&#8592; Go back to personal details</a>
 							</div>
