--- a/full-service-form-3of5.html
+++ b/full-service-form-3of5.html
@@ -57,22 +57,24 @@
 			<h1> Art Direction </h1>
 			<div class="form">
 				<form action="/action_page.php">
-					<div class="grid-col-1of1">
+					<div class="grid-col-1of1 art-desc">
 							<div class="name-item">
 								<label for="date">Describe the mood, style, and/or colour palette</label>
 								<textarea id="review-body" name="review-body" rows="4" cols="50" placeholder="Eg. Farmhouse wedding with pastel-coloured floral arrangements and theme..."></textarea>
 							</div>
 					</div>
 
-					<div class="left-align">
-						<a href="full-service-form-2of5.html">&#8592; Back to location details
-							</a>
-					</div>
+					<div class="grid-col-1of1 buttons">
+						<div class="left-align">
+							<a href="full-service-form-2of5.html">&#8592; Back to location details
+								</a>
+						</div>
 
-					<div class="right-align">
-						<a href="full-service-form-4of5.html">
-							<button type="button" class="btn-main">BUDGET</button>
-						</a>
+						<div class="right-align">
+							<a href="full-service-form-4of5.html">
+								<button type="button" class="btn-main">BUDGET</button>
+							</a>
+						</div>
 					</div>
 
 				</form>
