--- a/full-service-form-4of5.html
+++ b/full-service-form-4of5.html
@@ -58,7 +58,7 @@
 			<div class="form">
 				<form action="/action_page.php">
 					
-					<div class="grid-col-1of1">
+					<div class="grid-col-1of1 budget">
 						<label for="phone-number">What is your estimated budget?</label>
 						 <select id="contact" name="contact">
 						    <option value="email">Under $1000</option>
@@ -68,16 +68,18 @@
 	 					 </select>
  					</div>
 
- 					<div class="left-align">
-						<a href="full-service-form-3of5.html">&#8592; Back to art direction
-							</a>
-					</div>
+ 					<div class="grid-col-1of1 buttons">
+	 					<div class="left-align">
+							<a href="full-service-form-3of5.html">&#8592; Back to art direction
+								</a>
+						</div>
 
 
-					<div class="right-align">
-						<a href="full-service-form-5of5.html">
-							<button type="button" class="btn-main">SUBMIT FORM</button>
-							</a>
+						<div class="right-align">
+							<a href="full-service-form-5of5.html">
+								<button type="button" class="btn-main">SUBMIT FORM</button>
+								</a>
+						</div>
 					</div>
 
 				</form>
