--- a/full-service-form-1of5.html
+++ b/full-service-form-1of5.html
@@ -82,23 +82,17 @@
 				  			<label for="province">Province</label>
 				  			<input type="text" id="province" name="Province" placeholder='Your province'>
 				  		</div>
-				  	</div>
-
-				  	<div class="grid-col-1of3">
 				  		<div class="name-item">
 							<label for="city">City</label>
 				  			<input type="text" id="city" name="city" placeholder='Your city'>
-				  		</div>
-				    </div>
-
-				    <div class="grid-col-1of3">
+				  		</div>				  
 				    	<div class="name-item">
 							<label for="pc">Postal Code</label>
 				   			<input type="text" id="pc" name="pc" placeholder='XXX XXX'>
 				   		</div>
 				   </div>
 
-				  	<div class="grid-col-1of2">
+				  <div class="grid-col-2">
 				  		<div class="name-item">
 				  			<label for="email-ad">Email Address</label>
 				  			<input type="text" id="email-ad" name="email-ad" placeholder='name@domain.com'>
