--- a/citations.html
+++ b/citations.html
@@ -95,10 +95,11 @@
 
 					<li>Ross, Alexander. Photo of bride holding onto white and pink flowers [Photo]. Retrieved from <a href="https://unsplash.com/photos/MnqfRlk4AOQ">https://unsplash.com/photos/MnqfRlk4AOQ</a></li>
 
-					<li>Spratt, Annie. Floral centerpiece on dinner table [Photo]. Retrieved from <a href="https://unsplash.com/photos/TQSB-suJu1k">hhttps://unsplash.com/photos/TQSB-suJu1k</a></li>
+					<li>Spratt, Annie. Floral centerpiece on dinner table [Photo]. Retrieved from <a href="https://unsplash.com/photos/TQSB-suJu1k">hhttps://unsplash.com/photos/TQSB-suJu1k</li>
 
-					<li>Spratt, Annie. Floral wrapped in silverware on plate [Photo]. Retrieved from <a href="https://unsplash.com/photos/uDoDaHA_mH8">https://unsplash.com/photos/uDoDaHA_mH8/a></li>
+					<li>Spratt, Annie. Floral wrapped in silverware on plate [Photo]. Retrieved from <a href="https://unsplash.com/photos/uDoDaHA_mH8">https://unsplash.com/photos/uDoDaHA_mH8</li>
 
+					<li>Social Media Icons. Retrieved from <a href="www.fontawesome.com">www.fontawesome.com</li>	
 				
 				</ul>
 
