--- a/citations.html
+++ b/citations.html
@@ -97,7 +97,7 @@
 
 					<li>Spratt, Annie. Floral centerpiece on dinner table [Photo]. Retrieved from <a href="https://unsplash.com/photos/TQSB-suJu1k">hhttps://unsplash.com/photos/TQSB-suJu1k</a></li>
 
-					<li>Spratt, Annie. Floral wrapped in silverware on plate [Photo]. Retrieved from <a href="https://unsplash.com/photos/uDoDaHA_mH8">https://unsplash.com/photos/uDoDaHA_mH8<</a>/li>
+					<li>Spratt, Annie. Floral wrapped in silverware on plate [Photo]. Retrieved from <a href="https://unsplash.com/photos/uDoDaHA_mH8">https://unsplash.com/photos/uDoDaHA_mH8<</a></li>
 
 					<li>Social Media Icons. Retrieved from <a href="www.fontawesome.com">www.fontawesome.com</a></li>	
 				
