updated website grid structure

--- a/styleguide.html
+++ b/styleguide.html
@@ -778,37 +778,45 @@
 			<!----- Web Grids ----->
 			<section>
 			      <h1 class="styleguide">Website Grid Structure</h1>
-			       <p> The website uses an 8 column grid with 3rem padding around.
+			       <p> The website uses a 12 column grid. Each webpage uses a combination of 3/12, 4/12, 6/12, 5/12, 10/12, or 12/12. 
 					<section>
 						<h2>CSS Code:</h2>
 		       			 <code>
 		       			 	.grid <br>
-		       			 	.col-1of8<br>
+		       			 	.col-1of12<br>
 						</code>
 
 						<h2>HTML Code:</h2>
 			       			 <code>
 			       			 	&lt;div class ="grid"&gt;
-									 &lt;div class ="col-1of8"&gt;1/8 &lt;/div&gt; <br>
-									 &lt;div class ="col-1of8"&gt;1/8 &lt;/div&gt; <br>
-									 &lt;div class ="col-1of8"&gt;1/8 &lt;/div&gt; <br>
-									 &lt;div class ="col-1of8"&gt;1/8 &lt;/div&gt; <br>
-									 &lt;div class ="col-1of8"&gt;1/8 &lt;/div&gt; <br>
-									 &lt;div class ="col-1of8"&gt;1/8 &lt;/div&gt; <br>
-									 &lt;div class ="col-1of8"&gt;1/8 &lt;/div&gt; <br>
-									 &lt;div class ="col-1of8"&gt;1/8 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
+									 &lt;div class ="col-1of12"&gt;1/12 &lt;/div&gt; <br>
 								&lt;div&gt;
 							</code>
 
 						<div class ="grid">
-							<div class ="col-1of8">1/8</div>
-							<div class ="col-1of8">1/8</div>
-							<div class ="col-1of8">1/8</div>
-							<div class ="col-1of8">1/8</div>
-							<div class ="col-1of8">1/8</div>
-							<div class ="col-1of8">1/8</div>
-							<div class ="col-1of8">1/8</div>
-							<div class ="col-1of8">1/8</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
+							<div class ="col-1of12">1/12</div>
 						</div>
 					</section>
 
