updated shipping text fields

--- a/shipping-details.html
+++ b/shipping-details.html
@@ -98,7 +98,7 @@
 				   		</div>
 				   </div>
 
-				  	<div class="grid-col-1of2">
+				  	 <div class="grid-col-2">
 				  		<div class="name-item">
 				  			<label for="email-ad">Email Address</label>
 				  			<input type="text" id="email-ad" name="email-ad" placeholder='name@domain.com'>
