--- a/detailed-product-plant.html
+++ b/detailed-product-plant.html
@@ -61,7 +61,7 @@
 			</div>
 			<div class="product-desc">
 				<div class= "container-title">
-					<h2>Aloe Succulent — $9.99 </h2>
+					<h2>Aloe Succulent — from $9.99 </h2>
 				</div>
 			  	<div class="stars">
 		              <p>&#9733; &#9733; &#9733; &#9733; &#9733; <a href="#review">(5)</a></p>
