--- a/detailed-product.html
+++ b/detailed-product.html
@@ -62,7 +62,7 @@
 			<div class="product-desc">
 				<div class= "container-title">
 					<div>
-					<h2>Lover's Sunrise — $45</h2>
+					<h2>Lover's Sunrise — from $45</h2>
 					<!-- <h2> $45</h2> -->
 					</div>
 				</div>
