--- a/shop-plants.html
+++ b/shop-plants.html
@@ -66,15 +66,9 @@
 				<div class ="product-item col-1of3">
 					<a href="detailed-product-plant.html">
 					  	 <img src="img/products/mong-bui.jpg" alt="Photo of an aloe succulent">
-					  	  <!-- <div class="container-title"> -->
 					  	 	 <p class="product-name">Aloe Succulent</p>
-					  	  <!-- </div> -->
-						 	 <p class ="price">$9.99</p>
+						 	 <p class ="price">from $9.99</p>
 						 	 <a class ="btn-add" href="cart.html"> + Add </a>
-
-						  <!-- <div class="btn-position">
-								<a class ="btn-add" href="detailed-product.html"> + Quick Add </a>
-					 	  </div> -->
 				 	</a>
 				</div>
 
@@ -82,7 +76,7 @@
 					<a href="detailed-product-2.html">
 					  	 <img src="img/products/alex-loup.jpg" alt="Photo of eucalyptus">
 					  	  <p class="product-name">Eucalyptus</p>
-						  <p class ="price">12.99</p>
+						  <p class ="price">from 12.99</p>
 						  <a class ="btn-add" href="cart.html"> + Add </a>
 					</a>
 
@@ -92,7 +86,7 @@
 					<a href="detailed-product-2.html">
 					  	 <img src="img/products/charles-deluvio.jpg" alt="Photo of light pink bouquet">
 					  	  <p class="product-name">Cactus</p>
-						  <p class ="price">5.99</p>
+						  <p class ="price">from 5.99</p>
 						  <a class ="btn-add" href="cart.html"> + Add </a>
 					</a>
 				</div>
