--- a/shop.html
+++ b/shop.html
@@ -67,7 +67,7 @@
 				  	 <a href="detailed-product.html">
 					  	 <img src="img/products/red-bouquet.png" alt="Photo of Lover's Sunrise bouquet">
 					  	 	 <p class="product-name">Lover's Sunrise</p>
-						 	 <p class ="price">$45.99</p>
+						 	 <p class ="price">from $45.99</p>
 						 	 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				 	</a>
 				</div>
@@ -76,7 +76,7 @@
 					<a href="detailed-product-2.html">
 					  	 <img src="img/products/red-bouquet.jpg" alt="Photo of red bouquet">
 					  	  <p class="product-name">Radiantly Rouge</p>
-						  <p class ="price">$55.99</p>
+						  <p class ="price">from $55.99</p>
 						  <a class ="btn-add" href="cart.html"> Add to cart </a>
 					</a>
 
@@ -86,7 +86,7 @@
 					<a href="detailed-product-2.html">
 					  	 <img src="img/products/light-pink-bouquet.jpg" alt="Photo of light pink bouquet">
 					  	  <p class="product-name">English Gardens</p>
-						  <p class ="price">$48.99</p>
+						  <p class ="price sale"><s class="old-price">from $48.99</s> from $44.99</p>
 						  <a class ="btn-add" href="cart.html"> Add to cart </a>
 					</a>
 				</div>
@@ -95,7 +95,7 @@
 				<a href="detailed-product-2.html">
 				  	 <img src="img/products/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
 				  	  <p class="product-name">Just Keep Swimming</p>
-					  <p class ="price">$45.99</p>
+					  <p class ="price">from $45.99</p>
 					  <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
 			</div>
@@ -104,7 +104,7 @@
 				<a href="detailed-product-2.html">
 				  	 <img src="img/products/lavender-bouquet.jpg" alt="Photo of purple bouquet">
 				  	  <p class="product-name">Lavender Dreams</p>
-					  <p class ="price">$40.99</p>
+					  <p class ="price">OUT OF STOCK</p>
 					  <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
 			</div>
@@ -113,7 +113,7 @@
 				<a href="detailed-product-2.html">
 				  	 <img src="img/products/summer-bouquet.jpg" alt="Photo of yellow, pink and purple bouquet">
 				  	  <p class="product-name">Spirit of Summer</p>
-					  <p class ="price">$44.99</p>
+					  <p class ="price">from $44.99</p>
 					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
 			</div>
@@ -122,7 +122,7 @@
 				<a href="detailed-product-2.html">
 				  	 <img src="img/products/violet-bouquet.jpg" alt="Photo of violet bouquet">
 				  	  <p class="product-name"> Very Violet</p>
-					  <p class ="price">$39.99</p>
+					  <p class ="price">from $39.99</p>
 					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
 			</div>
@@ -131,7 +131,7 @@
 				<a href="detailed-product-2.html">
 				  	 <img src="img/products/pink-bouquet.jpg" alt="Photo of pink bouquet">
 				  	  <p class="product-name">Pretty In Pink</p>
-					  <p class ="price">$36.99</p>
+					  <p class ="price">from $36.99</p>
 					 <a class ="btn-add" href="cart.html"> Add to cart </a>
 				</a>
 			</div>
