--- a/detailed-product-2.html
+++ b/detailed-product-2.html
@@ -61,7 +61,7 @@
 			</div>
 			<div class="product-desc">
 				<div class= "container-title">
-					<h2>Radiantly Rouge — $55.99</h2>
+					<h2>Radiantly Rouge — from $55.99</h2>
 				</div>
 			  	<div class="stars">
 		              <p>&#9733; &#9733; &#9733; &#9733; &#9733; <a href="#review">(7)</a></p>
