corrected code from validator results

--- a/cart.html
+++ b/cart.html
@@ -73,9 +73,9 @@
 					</div>
 					<p class="product-size">Small</p>
 					<div>
-						<button>-</button>
+						<button aria-label="remove">-</button>
 							<span class="product-quantity">1</span>
-						<button>+</button>
+						<button aria-label="add">+</button>
 					</div>
 					<p class="product-price">$45</p>
 				</div>
@@ -87,9 +87,9 @@
 					</div>
 					<p class="product-size">Small</p>
 					<div>
-						<button>-</button>
+						<button aria-label="remove">-</button>
 							<span class="product-quantity">1</span>
-						<button>+</button>
+						<button aria-label="add">+</button>
 					</div>
 					<p class="product-price">$9.99</p>
 				</div>
