--- a/citations.html
+++ b/citations.html
@@ -83,7 +83,7 @@
 
 					<li> Family [Icon]. Retrieved from <a href="https://thenounproject.com/term/family/1309526/">https://thenounproject.com/term/family/1309526</a></li>
 
-					<li> Earth Truck [Icon]. Retrieved from <a href="hhttps://thenounproject.com/term/sustainable-transport/2942855//">https://thenounproject.com/term/sustainable-transport/2942855</a></li>
+					<li> Earth Truck [Icon]. Retrieved from <a href="https://thenounproject.com/term/sustainable-transport/2942855//">https://thenounproject.com/term/sustainable-transport/2942855</a></li>
 
 					<li> Hands Heart [Icon]. Retrieved from <a href="https://thenounproject.com/term/care/1309510/">https://thenounproject.com/term/care/1309510</a></li>
 
@@ -99,7 +99,7 @@
 
 					<li>Spratt, Annie. Floral wrapped in silverware on plate [Photo]. Retrieved from <a href="https://unsplash.com/photos/uDoDaHA_mH8">https://unsplash.com/photos/uDoDaHA_mH8</a></li>
 
-					<li>Social Media Icons. Retrieved from <a href="www.fontawesome.com">www.fontawesome.com</a></li>	
+					<li>Social Media Icons. Retrieved from <a href="fontawesome.com">fontawesome.com</a></li>	
 				
 				</ul>
 
