--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 			 </div>
 
 			 <div class="child-footer mailing-list">
-				 <h3>GET THE DIRT</h3>
+				 <label><h3>GET THE DIRT</h3></label>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-				 <button type="button" class="btn-submit">→</button>
+				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
