--- a/wireframes.html
+++ b/wireframes.html
@@ -102,15 +102,15 @@
 				<!--Task 8-->
 				<section id="task8">
 					<h2>Be informed of products that are new, on sale, and out of stock.</h2>
-						<img src="img/wireframes/task8.png" alt="Desktop and mobile userflows for Task 8: Be informed of products that are new, on sale, and out of stock">
+						<img src="img/wireframes/task8.png" alt="Desktop and mobile userflows for Task 8">
 				</section>
 
 		</section> <!--.wireframes ends-->
 
 		<!--Mock Ups Section-->
 		<section class="mockups">
-			<h1 class="styleguide">MOCK UP EXAMPLE</h2>
-				<img src="img/home-mockups.png" alt="High-fidelity mockups of the company's home page for a desktop view (left) and mobile view (right).">
+			<h1 class="styleguide">MOCK UP EXAMPLE</h1>
+				<img src="img/home-mockups.png" alt="High-fidelity mockups of the company's home page">
 		</section>
 
 	</body>
