--- a/support.html
+++ b/support.html
@@ -72,8 +72,7 @@
 
 	    <button class="accordion">Where do you delivery?</button>
 		    <div class="panel">
-		      <p>
-		      	Our shop locally serves the following cities and surrounding areas:
+		      <p>Our shop locally serves the following cities and surrounding areas:</p>
 				<ul>
 				    <li> Burnaby </li>
 					<li>Vancouver</li>
@@ -100,6 +99,7 @@
 		      <p>
 		      	All arrangements are a final sale. We are always striving to create high quality arrangments, but if you feel that it wasn't up to your standards, reach out to us at fourseasonsfloristry@gmail.com. We can explore a solution that best accomodates you.
 		      </p>
+		   </div>
 
 	 </section>
 
@@ -124,43 +124,41 @@
 	<!----- Footer----->
 	 <footer class="main-footer grid">
 		 <div class="child-footer about">
-			 <h3 class="web">ABOUT FOUR SEASONS FLORAL</h3>
-			 <p>We are a family-owned and full-service floral shop
-				 based in Vancouver, BC.  creating bespoke floral
-				 arrangements for any types of occasions. 
-			</p>
+			 <h3>ABOUT FOUR SEASONS FLORAL</h3>
+			 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
+		 	</p>
 		</div>
 
 		 <div class="child-footer location">
-			 <h3 class="web">VISIT US</h3>
-			 <p>102 3375 Kingsway
+			 <h3>VISIT US</h3>
+			 <p>#102-3375 Kingsway
 				Vancouver, B.C. 
-				 V5R 5K6  </p>
+				V5R 5K6  </p>
 		</div>
 
 		 <div class="child-footer contact">
-			 <h3 class="web">CONTACT US</h3>
+			 <h3 >CONTACT US</h3>
 			 <p>(604) 738-0678</p>
 			 <p>
-				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
-				 </p>
-				 <p>
-				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
-				 </p>
+			 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
+			 </p>
+			 <p>
+			 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
+			 </p>
 		 </div>
-	 	
- 		 <div class="child-footer mailing-list">
-			 <h3>GET THE DIRT</h3>
+
+		 <div class="child-footer mailing-list">
+			 <label><h3>GET THE DIRT</h3></label>
 			 <p>No spam. Just great content.</p>
 			 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-			 <button type="button" class="btn-submit">→</button>
+			 <button aria-label="type email address" type="button" class="btn-submit">→</button>
 		 </div>
  	</footer>
 
-		<div class="sub-footer">
- 			<a href="styleguide.html" target="_blank"> Styleguide</a>
- 			<a href="citations.html" target="_blank"> Citations</a>
- 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
+	<div class="sub-footer">
+			<a href="styleguide.html" target="_blank"> Styleguide</a>
+			<a href="citations.html" target="_blank"> Citations</a>
+			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
 		</div>
 
 </body>
