corrected code footer of service flow based on validator results

--- a/full-service-form-3of5.html
+++ b/full-service-form-3of5.html
@@ -84,23 +84,20 @@
 		<!----- Footer----->
 		 <footer class="main-footer grid">
 			 <div class="child-footer about">
-				 <h3 class="web">ABOUT FOUR SEASONS FLORAL</h3>
-				 <p>We are a family-owned and full-service floral shop
-					 based in Vancouver, BC.  creating bespoke floral
-					 arrangements for any types of occasions. 
-					 We’re open Monday - Fridays from
-					 10am - 5pm PST</p>
+				 <h3>ABOUT FOUR SEASONS FLORAL</h3>
+				 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
+			 	</p>
 			</div>
 
 			 <div class="child-footer location">
-				 <h3 class="web">VISIT US</h3>
-				 <p>102 3375 Kingsway
+				 <h3>VISIT US</h3>
+				 <p>#102-3375 Kingsway
 					Vancouver, B.C. 
-					 V5R 5K6  </p>
+					V5R 5K6  </p>
 			</div>
 
 			 <div class="child-footer contact">
-				 <h3 class="web">CONTACT US</h3>
+				 <h3 >CONTACT US</h3>
 				 <p>(604) 738-0678</p>
 				 <p>
 				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
@@ -109,12 +106,12 @@
 				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
 				 </p>
 			 </div>
-		 	
-		 	 <div class="child-footer mailing-list">
-				 <h3>GET THE DIRT</h3>
+
+			 <div class="child-footer mailing-list">
+				 <label><h3>GET THE DIRT</h3></label>
 				 <p>No spam. Just great content.</p>
 				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-				 <button type="button" class="btn-submit">→</button>
+				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
 			 </div>
 	 	</footer>
 
